# appscmd

./: Cargo.toml  appscmd_public.der  build-test.sh  build.sh  push.sh  readme.md
src/: daemon.rs  main.rs  uds.rs
