[package]
name = "appscmd"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["set-header"] }
reqwest = {version="0.12.14",default-features=false}
# tiny_http = "0.12.0"
# sha2 = {version="0.10.8","features"=["oid"]}
# rsa = "0.9"
# base64 = "0.22"

[profile.release]
lto = true
strip = true

[features]
test = []